// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Compact story renders snapshot 1`] = `
<div
  class="select select--compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-15"
    aria-expanded="true"
    aria-haspopup="true"
    class="select-button select-button--compact"
    id="headlessui-listbox-button-14"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-14"
    aria-orientation="vertical"
    class="popover-container select__options select__options--compact"
    id="headlessui-listbox-options-15"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-16"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-17"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-18"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> CompactUsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-41"
    aria-expanded="true"
    aria-haspopup="true"
    class="select-button select-button--compact"
    id="headlessui-listbox-button-40"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-40"
    aria-orientation="vertical"
    class="popover-container select__options select__options--compact"
    id="headlessui-listbox-options-41"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-42"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-43"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-44"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> CompactWithOptionsRightAligned story renders snapshot 1`] = `
<div
  class="select select--compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-20"
    aria-expanded="true"
    aria-haspopup="true"
    class="select-button select-button--compact"
    id="headlessui-listbox-button-19"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-19"
    aria-orientation="vertical"
    class="popover-container select__options select__options--align-right select__options--compact"
    id="headlessui-listbox-options-20"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-21"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-22"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-23"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> Default story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-2"
    aria-expanded="true"
    aria-haspopup="true"
    class="select-button"
    id="headlessui-listbox-button-1"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-1"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-2"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-3"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-4"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-5"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> DefaultWithVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-8"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-10"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-8 headlessui-listbox-button-9"
    class="select-button"
    id="headlessui-listbox-button-9"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-8"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-10"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-11"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-12"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-13"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> SeparateButtonAndMenuWidth story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-25"
    aria-expanded="true"
    aria-haspopup="true"
    class="select-button"
    id="headlessui-listbox-button-24"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-24"
    aria-orientation="vertical"
    class="popover-container select__options separate-button-and-menu-width"
    id="headlessui-listbox-options-25"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-26"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-27"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-28"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> UsingChildrenProp story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-29"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-31"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-29 headlessui-listbox-button-30"
    class="select-button"
    id="headlessui-listbox-button-30"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-label-29"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-31"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-32"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-33"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-34"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> UsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-36"
    aria-expanded="true"
    aria-haspopup="true"
    class="select-button"
    id="headlessui-listbox-button-35"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-35"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-36"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-37"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-38"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-39"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> UsingFunctionChildrenProp story renders snapshot 1`] = `
<div
  aria-label="Favorite Animal"
  class="select select--non-compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-46"
    aria-expanded="true"
    aria-haspopup="true"
    class="function-children__button"
    id="headlessui-listbox-button-45"
    type="button"
  >
    Select
    <svg
      aria-hidden="true"
      class="icon function-children__icon"
      fill="currentColor"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#filter-list"
      />
    </svg>
  </button>
  <div
    aria-labelledby="headlessui-listbox-button-45"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-46"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-47"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-48"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-49"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;

exports[`<Select /> renders the OpenByDefault story 1`] = `
<div
  class="select select--non-compact"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-51"
    aria-expanded="true"
    aria-haspopup="true"
    class="select-button"
    id="headlessui-listbox-button-50"
    type="button"
  >
    <span>
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        xlink:href="test-file-stub#expand-more"
      />
    </svg>
  </button>
  <div
    aria-activedescendant="headlessui-listbox-option-56"
    aria-labelledby="headlessui-listbox-button-50"
    aria-orientation="vertical"
    class="popover-container select__options select__options--full-width"
    id="headlessui-listbox-options-51"
    role="listbox"
    tabindex="0"
  >
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-55"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Dogs
    </div>
    <div
      aria-selected="true"
      class="popover-list-item popover-list-item--active"
      id="headlessui-listbox-option-56"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__icon"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="test-file-stub#check"
          />
        </svg>
      </div>
      Cats
    </div>
    <div
      class="popover-list-item"
      id="headlessui-listbox-option-57"
      role="option"
      tabindex="-1"
    >
      <div
        class="popover-list-item__no-icon"
      />
      Birds
    </div>
  </div>
</div>
`;
